Fix box-shadow overflow bug in user customization

--- a/src/styles/views/lobby.scss
+++ b/src/styles/views/lobby.scss
@@ -64,10 +64,17 @@
         background-color: rgba(#fff, 1);
         border-radius: 3rem;
         padding: 3rem;
-
         display: grid;
         grid-template-rows: auto 1fr;
         grid-auto-rows: min-content;
+
+        @include respond(lg) {
+            padding: 3rem 0;
+            
+            & > * {
+                padding: 0 3rem;
+            }
+        }
 
         & .ant-tabs {
             grid-row: 2 / 3;
